<resources>
    <string name="app_name">Saturn</string>
    <string name="nombre">Nombre:</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrar">Registrar</string>
    <string name="saturn">SATURN</string>
    <string name="edad">Edad:</string>
    <string name="correo">Correo:</string>
    <string name="nickname">Nickname:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="plataformas">Plataformas:</string>
    <string name="participantes">Participantes:</string>
    <string name="fecha">Fecha:</string>
    <string name="Descripcion">Descripcion:</string>
    <string name="siguiente">Siguiente</string>
    <string name="cancelar">Cancelar</string>
    <string name="registro">Registro</string>
    <string name="foto_de_perfil">Foto de perfil:</string>
    <string name="foto_de_evento">Foto:</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="title_activity_login">loginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="crear_un_evento">Crear un evento</string>
    <string name="Nombre_del_juego">Nombre del juego:</string>
    <string name="Crear_sesion">01 JAN 2022</string>
</resources>