<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:background="@drawable/listgrad">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="446dp"
        android:layout_height="531dp"
        android:layout_gravity="bottom"
        android:rotation="-45"
        app:srcCompat="@drawable/vector" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/marca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/ruslandisplay_regular"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/yellow"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/marca"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="125dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:gravity="center"
                android:text="@string/registro"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/registro"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/nombre"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/laNombre"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/edad"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/laEdad"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/correo"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/laCorreo"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/nickname"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laContra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/laNickname"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/contrase_a"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laPlataformas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/laContra"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/plataformas"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/registro"
                android:layout_marginStart="46dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/laNombre"
                android:background="@drawable/normalradius"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editNick"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/laContra"
                android:background="@drawable/normalradius"
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editNombre"
                android:layout_marginStart="73dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/laEdad"
                android:background="@drawable/normalradius"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editEdad"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/laCorreo"
                android:background="@drawable/normalradius"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editNick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/laNickname"
                android:background="@drawable/normalradius"
                android:ems="10"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/plataformas"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/laPlataformas"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/normalradius"
                android:entries="@array/plataformas" />

            <android.widget.Button
                android:id="@+id/next"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/buscarIma"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="98dp"
                android:background="@drawable/colorstroke"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/siguiente"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/back"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/next"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="130dp"
                android:background="@drawable/colorstroke"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/cancelar"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/FotoP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/plataformas"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/foto_de_perfil"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/imageP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/FotoP"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                />

            <Button
                android:id="@+id/buscarIma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageP"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="139dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="124dp"
                android:background="@null"
                android:text="@string/seleccionar_imagen"
                android:textColor="@color/white" />




        </RelativeLayout>
    </ScrollView>
</FrameLayout>