<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearEventoActivity"
    android:background="@drawable/listgrad">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="448dp"
        android:layout_height="531dp"
        android:layout_gravity="bottom"
        android:rotation="-45"
        app:srcCompat="@drawable/control_rotado" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/marca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/ruslandisplay_regular"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/yellow"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/marca"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:gravity="center"
                android:text="@string/crear_un_evento"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laNombre"
                android:layout_width="113dp"
                android:layout_height="48dp"
                android:layout_below="@id/registro"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/Nombre_del_juego"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/laNombre"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/Descripcion"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laParticipantes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/laDescripcion"
                android:layout_marginStart="20dp"
                android:layout_marginTop="83dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/participantes"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/laParticipantes"
                android:layout_marginStart="20dp"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/fecha"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laPlataformas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/datePicker"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/plataformas"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/registro"
                android:layout_marginStart="21dp"
                android:layout_marginTop="39dp"
                android:layout_toEndOf="@id/laNombre"
                android:background="@drawable/normalradius"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="83dp"
                android:layout_below="@id/editNombre"
                android:layout_marginStart="23dp"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@id/laDescripcion"
                android:background="@drawable/normalradius"
                android:ems="10" />

            <EditText
                android:id="@+id/editParticipantes"
                android:layout_width="81dp"
                android:layout_height="45dp"
                android:layout_below="@id/editDescripcion"
                android:layout_marginStart="14dp"
                android:layout_marginTop="28dp"
                android:layout_toEndOf="@id/laParticipantes"
                android:background="@drawable/normalradius"
                android:ems="10"
                android:inputType="number" />


            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/laFecha"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/whitebackground"
                android:calendarTextColor="@color/white"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <Spinner
                android:id="@+id/plataformas"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/laPlataformas"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/normalradius"
                android:entries="@array/plataformas" />

            <android.widget.Button
                android:id="@+id/next"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/buscarIma"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="98dp"
                android:background="@drawable/colorstroke"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/registrar"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/back"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/next"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="110dp"
                android:background="@drawable/colorstroke"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/cancelar"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/FotoP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/plataformas"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubik_variable_wght"
                android:text="@string/foto_de_evento"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/imageP"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_below="@id/FotoP"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/colorstroke"
                android:scaleType="fitCenter"
                android:src="@drawable/hito" />

            <Button
                android:id="@+id/buscarIma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageP"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="139dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="124dp"
                android:background="@null"
                android:text="@string/seleccionar_imagen"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/darkblue"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/arcade"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/colorstroke"
            android:src="@drawable/controlrecto" />

        <ImageButton
            android:id="@+id/mapa"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/mapa" />

        <ImageButton
            android:id="@+id/chats"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/group" />

        <ImageButton
            android:id="@+id/persona"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/hito" />
    </LinearLayout>
</FrameLayout>