<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/listgrad">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="315dp"
            android:layout_height="338dp"
            android:layout_gravity="center"
            android:src="@drawable/image_saturn" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturn"
            android:textSize="48sp"
            android:textColor="@color/yellow"
            android:fontFamily="@font/ruslandisplay_regular"
            android:layout_gravity="center"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="40">

        <android.widget.Button
            android:id="@+id/inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/colorstroke"
            android:layout_weight="1"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/rubik_variable_wght"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <android.widget.Button
            android:id="@+id/registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registrarse"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/rubik_variable_wght"
            android:background="@drawable/colorstroke"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"/>
    </LinearLayout>
</LinearLayout>