<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="446dp"
        android:layout_height="531dp"
        android:layout_gravity="bottom"
        android:rotation="-45"
        android:src="@drawable/vector" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/listgrad"
        android:paddingHorizontal="50dp">

        <TextView
            android:id="@+id/marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/ruslandisplay_regular"
            android:text="@string/app_name"
            android:textColor="@color/yellow"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/laCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/correo"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/rubik_variable_wght"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/normalradius"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="15dp"
            android:hint="Ingrese su email" />

        <TextView
            android:id="@+id/laContra"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contrase_a"
            android:fontFamily="@font/rubik_variable_wght"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/normalradius"
            android:paddingHorizontal="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Ingrese la contraseña" />

        <Button
            android:id="@+id/iniciar"
            android:layout_marginTop="150dp"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingHorizontal="15dp"
            android:layout_gravity="center"
            android:text="Iniciar sesion"
            android:fontFamily="@font/rubik_variable_wght"
            android:textColor="@color/white"
            android:background="@drawable/colorstroke"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/funar"
            android:background="@drawable/colorstroke"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:paddingHorizontal="15dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/rubik_variable_wght"
            android:textColor="@color/white"
            android:text="Cancelar"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>
</FrameLayout>